# iw-ai-core

./: .claudeignore  .coverage  .dashboard.pid  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .iw-orch.json  .iw-orch.json.example  .iw-skills-lock.json  .pre-commit-config.yaml  .step_done_report.md  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.e2e  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  TRADEMARK.md  ai-core.sh  alembic.ini  docker-compose.bootstrap.yml  docker-compose.e2e.yml  docker-compose.yml  execution_brief.json  package-lock.json  package.json  projects.toml  projects.toml.example  pyproject.toml
.claude/: compact-reminder.md  settings.json
.claude/agents/: api-impl.md  api-review.md  backend-impl.md  backend-review.md  batch-planner.md  code-review-final-impl.md  code-review-final-review.md  code-review-fix-final-impl.md  code-review-fix-impl.md  code-review-impl.md  code-review-review.md  design-reviewer.md  frontend-impl.md  frontend-review.md  orchestrator.md  pipeline-impl.md  pipeline-review.md  quality-fix-impl.md  quality-validation-impl.md  qv-browser.md  self-assess-impl.md  template-impl.md  tests-impl.md  tests-review.md
.claude/hooks/: format-python.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: codeql.yml  compliance-scan.yml  contract-fuzz.yml  daemon-chaos.yml  e2e.yml  perf-budgets.yml  release-please.yml  schema-validation.yml  scorecard.yml  security-scan.yml  test-health.yml  test-quality.yml  visual-regression.yml
.opencode/: config.json  opencode.json
.opencode/agents/: api-impl.md  api-review.md  backend-impl.md  backend-review.md  code-review-final-impl.md  code-review-final-review.md  code-review-fix-final-review.md  code-review-fix-impl.md  code-review-fix-review.md  code-review-impl.md  code-review-review.md  database-impl.md  database-review.md  deep-research.md  design-reviewer.md  frontend-impl.md  frontend-review.md  orchestrator.md  pipeline-impl.md  pipeline-review.md  quality-validation-impl.md  qv-browser.md  qv-gate.md  template-impl.md  template-review.md  tests-impl.md  tests-review.md
.opencode/commands/: analyze_item.md  doc-job.md  execute.md  iw-new-cr.md  iw-new-feature.md  iw-new-incident.md  iw-research.md  iw-review-design.md  ship-docs.md  us-test.md
.pi/agents/: backend-impl.md  backend-review.md  code-review-final-impl.md  code-review-final-review.md  code-review-fix-final-review.md  code-review-fix-impl.md  code-review-review.md  database-impl.md  deep-research.md  quality-fix-impl.md  qv-gate.md  tests-impl.md  tests-review.md
agents/claude/: api-review.md  backend-impl.md  backend-review.md  code-review-final-impl.md  code-review-fix-final-impl.md  code-review-fix-final-review.md  code-review-fix-review.md  code-review-impl.md  database-impl.md  database-review.md  deep-research.md  frontend-impl.md  frontend-review.md  pipeline-impl.md  pipeline-review.md  qv-browser.md  qv-gate.md  template-review.md  tests-impl.md
ai-dev/: workflow.md
allure-report-71/: 173.app-1c928f385beb78e2c2e8.js  600.app-1c928f385beb78e2c2e8.js  638.app-1c928f385beb78e2c2e8.js  672.app-1c928f385beb78e2c2e8.js  686.app-1c928f385beb78e2c2e8.js  943.app-1c928f385beb78e2c2e8.js  app-1c928f385beb78e2c2e8.js  index.html  summary.json
allure-report-72/: 174.app-1c928f385beb78e2c2e8.js  252.app-1c928f385beb78e2c2e8.js  282.app-1c928f385beb78e2c2e8.js  29.app-1c928f385beb78e2c2e8.js  310.app-1c928f385beb78e2c2e8.js  416.app-1c928f385beb78e2c2e8.js  507.app-1c928f385beb78e2c2e8.js  527.app-1c928f385beb78e2c2e8.js  605.app-1c928f385beb78e2c2e8.js  725.app-1c928f385beb78e2c2e8.js  741.app-1c928f385beb78e2c2e8.js  749.app-1c928f385beb78e2c2e8.js  755.app-1c928f385beb78e2c2e8.js  894.app-1c928f385beb78e2c2e8.js  980.app-1c928f385beb78e2c2e8.js  index.html  summary.json
commands/: batch_status.md  batch_stop.md  e2e-test.md  execute_batch.md  fix_item.md  iw-new-cr.md  iw-new-feature.md  iw-new-incident.md  iw-research-quick.md  iw-review-design.md  ship-code.md
dashboard/: CLAUDE.md  __init__.py  app.py  dependencies.py  tailwind.config.js
docs/: IW_AI_Core_AI_Assistant_Models.md  IW_AI_Core_Agent_Constraints.md  IW_AI_Core_Architecture.html  IW_AI_Core_Architecture.md  IW_AI_Core_CLI_Spec.md  IW_AI_Core_DB_Backup_Restore.md  IW_AI_Core_DB_Setup.md  IW_AI_Core_Daemon_Design.md  IW_AI_Core_Dashboard_Design.md  IW_AI_Core_Database_Schema.md  IW_AI_Core_MCP_Server.md  IW_AI_Core_Migration_Checklist.md  IW_AI_Core_OSS_Accepted_Risk.md  IW_AI_Core_Requirements.md  IW_AI_Core_Tech_Stack.md  IW_AI_Core_Testing_Strategy.md  IW_AI_Core_Worktree_Isolation.md  README.md
executor/: CLAUDE.md  auto_merge.toml  context_overflow.py  pi_narration_guard.py  scope_gate.py  step_executor.sh  step_executor_lib.sh  tool_output_cap.py  worktree_commit.sh  worktree_setup.sh
orch/: CLAUDE.md  __init__.py  active_files.py  active_files.py.iw-collision  auto_merge_aggregator.py  batch_planner.py  cancel.py  config.py  design_doc_parser.py  diff_service.py  doc_diff.py  doc_report.py  doc_sections.py  doc_service.py  evidences.py  keep_alive_service.py  llm_usage.py  qv_gate_validator.py  regression_link_service.py  self_assess.py  test_health_service.py  test_runner.py
reports/: F-00081_S16_QvBrowser_report.md
scripts/: arch_check.py  backfill_functional_doc.py  backfill_regression_classification.py  check_db_column_docs.py  check_downgrade_minus1.py  check_pending_down_revision.py  check_templates.py  check_test_assertions.py  e2e_apply_item_fixtures.py  e2e_daemon_stub.py  e2e_dashboard_entrypoint.sh  e2e_down.sh  e2e_health_check.py  e2e_ollama_stub.py  e2e_opencode_stub.py  e2e_seed.py  e2e_up.sh  eval_set_f00055_curation.json  flake_detect_aggregate.py  llm_judge_test_review.py  mcp_verify.py  regen_eval_set_f00055.py  resolve_pending_migration.py  rewrite_down_revision.py  security_report.py
tests/: CLAUDE.md  assertion_free_baseline.txt  conftest.py
(+8518 files in other folders)
