[project]
name = "iw-ai-core"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "mako>=1.3.12",  # CVE-2026-44307
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # Dashboard
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.26",
    # Archive
    "zstandard>=0.23",
    # Diagrams
    "Pillow>=10.0",
    # Config
    "python-dotenv>=1.0",
    # tomllib is stdlib in 3.12+
    "markdown>=3.10.2",
    "markupsafe>=3.0.3",
    "types-markdown>=3.10.2.20260408",
    "weasyprint>=63.0",
    "llama-index-core>=0.14.20",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-vector-stores-lancedb>=0.5.0",
    "lancedb>=0.30.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
    "pandas>=3.0.2",
    "pathspec>=1.0.4",
    "tiktoken>=0.12.0",
    "unidiff>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
    "factory-boy>=3.3",
    "freezegun>=1.4",

    # Quality
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",

    # Type stubs
    "types-freezegun",
    "httpx>=0.27",
]

[project.scripts]
iw = "orch.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orch", "dashboard"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5.0",
    "testcontainers[postgres]>=4.0",
    "factory-boy>=3.3",
    "freezegun>=1.4",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-freezegun",
    "httpx>=0.27",
    "allure-pytest>=2.15.3",
    "pytest-timeout>=2.3.0",
    "types-pyyaml>=6.0.12.20260408",
    "beautifulsoup4>=4.14.3",
    "pip-audit>=2.7",
    "bandit[toml]>=1.7",
    "pytest-timeout>=2.4.0",
]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["skills/", ".claude/", "ai-dev/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TCH", "ARG", "PTH", "ERA"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "ARG002", "SLF001", "S603", "S607", "TC002", "TC003", "S110", "S108"]  # assert ok; fixture side effects; private access in tests ok; git subprocess in test fixtures; TC002: Session alias kept at runtime for reuse across session/scope pattern
"orch/db/migrations/**" = ["E501", "TC003"]  # migration files: long column definitions; Sequence used at runtime in upgrade()
"dashboard/routers/**" = ["B008", "TC001", "PT028"]  # FastAPI Depends() in default args is canonical; TC001 conflicts with FastAPI runtime model resolution; PT028 misfires on dashboard/routers/tests.py — ruff treats route handlers prefixed `tests_*` as pytest tests
"dashboard/services/oss_service.py" = ["S603", "S607", "S108"]  # git subprocess; /tmp paths for worktrees
"scripts/backfill_functional_doc.py" = ["S603", "S607"]  # opencode subprocess; agent script
"scripts/e2e_health_check.py" = ["T201", "S310"]  # CLI script; print output; http URL fetch
"orch/test_runner.py" = ["S602", "S603", "S607"]  # shell=True and npx are intentional for running user-configured test commands
"scripts/arch_check.py" = ["S112", "SIM102", "T201"]  # architecture checker script: prints to stdout; try-except-continue for file parsing; nested if for AST node type dispatch
"orch/keep_alive_service.py" = ["S603", "S607"]  # claude CLI subprocess with hardcoded greetings; never user input
"orch/daemon/browser_env.py" = ["S603", "S607"]  # docker logs is read-only; name from compose output
"orch/doc_service.py" = ["S603", "S607"]  # git log is intentional for staleness detection

# --- mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
# xdist is opt-in only via `make test-parallel` which passes `-n auto --dist=loadfile`.
# Do NOT add xdist defaults here — that would change `make test-unit` / `make test-integration` semantics.
addopts = "--import-mode=importlib --cov=orch --cov=dashboard --cov=executor --cov-report=term-missing:skip-covered --cov-report=html:tests/output/coverage/htmlcov --cov-report=xml:tests/output/coverage/coverage.xml --cov-report=json:tests/output/coverage/coverage.json -m 'not browser'"
markers = [
    "integration: marks tests as integration (require docker/testcontainer)",
    "smoke: fast critical-path tests; ~10 covering core flows; run via `make smoke`",
    "slow: marks tests as slow (deselected by default unless -m slow is passed)",
    "browser: marks tests that drive a real Chromium via playwright-cli; deselected by default — run with `-m browser` against a live dashboard the test data is visible to (e.g. iw-ai-core's existing data or an E2E stack)",
]
env = ["IW_CORE_AGENT_CONTEXT="]

[tool.coverage.run]
source = ["orch", "dashboard", "executor"]
omit = [
    "orch/db/migrations/versions/*",
    "tests/*",
    "scripts/*",
    "bin/*",
]
branch = true

[tool.coverage.report]
fail_under = 46
skip_covered = true
show_missing = true

# --- bandit ---
[tool.bandit]
exclude_dirs = ["tests", "scripts", "orch/db/migrations/versions", ".venv"]
skips = ["B101"]
