[project]
name = "iw-ai-core"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "mako>=1.3.12",  # CVE-2026-44307
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # Dashboard
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.26",
    # Archive
    "zstandard>=0.23",
    # Diagrams
    "Pillow>=10.0",
    # Config
    "python-dotenv>=1.0",
    # tomllib is stdlib in 3.12+
    "markdown>=3.10.2",
    "markupsafe>=3.0.3",
    "types-markdown>=3.10.2.20260408",
    "weasyprint>=63.0",
    "llama-index-core>=0.14.20",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-vector-stores-lancedb>=0.5.0",
    "lancedb>=0.30.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
    "pandas>=3.0.2",
    "pathspec>=1.0.4",
    "tiktoken>=0.12.0",
    "unidiff>=0.7,<1",
    # Dashboard AI Assistant — OpenCode HTTP+SSE client (F-00083)
    "httpx>=0.27",
    "httpx-sse>=0.4,<0.5",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
    "factory-boy>=3.3",
    "freezegun>=1.4",

    # Quality
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",

    # Type stubs
    "types-freezegun",
    "httpx>=0.27",
]

[project.scripts]
iw = "orch.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orch", "dashboard"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15",
    "respx>=0.21,<0.23",
    "testcontainers[postgres]>=4.0",
    "factory-boy>=3.3",
    "freezegun>=1.4",
    "mutmut>=2.5,<3.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-freezegun",
    "httpx>=0.27",
    "hypothesis>=6.100,<7",
    "allure-pytest>=2.15.3",
    "pytest-timeout>=2.3.0",
    "types-pyyaml>=6.0.12.20260408",
    "beautifulsoup4>=4.14.3",
    "pip-audit>=2.7",
    "bandit[toml]>=1.7",
    "pytest-timeout>=2.4.0",
    "pytest-rerunfailures>=14.0,<16",
    "diff-cover>=9",
    "vulture>=2.11",
    "deptry>=0.20",
    "pgtestdbpy>=0.0.1",
    # Pinned to the current major (4.x) — schemathesis's loader and check API
    # changed across majors; see tests/dashboard/test_schemathesis_contract.py.
    "schemathesis>=4.19,<5",
]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["skills/", ".claude/", "ai-dev/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TCH", "ARG", "PTH", "ERA"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "ARG002", "SLF001", "S603", "S607", "TC002", "TC003", "S110", "S108", "DTZ001"]  # assert ok; fixture side effects; private access in tests ok; git subprocess in test fixtures; TC002: Session alias kept at runtime for reuse across session/scope pattern; DTZ001: freezegun tests pass naive datetimes to freeze_time (legitimate pattern)
"orch/db/migrations/**" = ["E501", "TC003", "F401", "UP035", "I001"]  # migration files: long column definitions; Sequence used at runtime in upgrade(); boilerplate imports unused in merge migrations
"dashboard/routers/**" = ["B008", "TC001", "PT028"]  # FastAPI Depends() in default args is canonical; TC001 conflicts with FastAPI runtime model resolution; PT028 misfires on dashboard/routers/tests.py — ruff treats route handlers prefixed `tests_*` as pytest tests
"dashboard/services/oss_service.py" = ["S603", "S607", "S108"]  # git subprocess; /tmp paths for worktrees
"scripts/backfill_functional_doc.py" = ["S603", "S607"]  # opencode subprocess; agent script
"scripts/e2e_health_check.py" = ["T201", "S310"]  # CLI script; print output; http URL fetch
"orch/test_runner.py" = ["S602", "S603", "S607"]  # shell=True and npx are intentional for running user-configured test commands
"scripts/arch_check.py" = ["S112", "SIM102", "T201"]  # architecture checker script: prints to stdout; try-except-continue for file parsing; nested if for AST node type dispatch
"scripts/check_test_assertions.py" = ["T201"]  # CLI script: prints violations + JSON to stdout
"tests/unit/test_assertion_scanner.py" = ["ERA001"]  # tests carry commented-example labels for the patterns the scanner detects (ERA001 false-positive)
"orch/keep_alive_service.py" = ["S603", "S607"]  # claude CLI subprocess with hardcoded greetings; never user input
"orch/daemon/browser_env.py" = ["S603", "S607"]  # docker logs is read-only; name from compose output
"orch/doc_service.py" = ["S603", "S607"]  # git log is intentional for staleness detection
"orch/cancel.py" = ["S603", "S607"]  # git worktree and docker compose are intentional for worktree teardown

# --- mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
# xdist is opt-in only via `make test-parallel` which passes `-n auto --dist=loadfile`.
# Do NOT add xdist defaults here — that would change `make test-unit` / `make test-integration` semantics.
#
# `pytest-randomly` is **ON by default** (CR-00055, 2026-05-16). The integration +
# dashboard suite is robust to randomisation via per-test PostgreSQL template-clone
# (pgtestdbpy>=0.0.1): a session-scoped template DB is migrated once; each test gets
# its own fresh clone (~25 ms via CREATE DATABASE … TEMPLATE … with WAL_LOG strategy);
# IW_CORE_DB_* env vars are monkeypatched per-test so `iw` CLI subprocesses inherit
# the isolated clone — closing the gap that defeated savepoint-only and per-module-TRUNCATE
# designs in CR-00049 (see docs/research/R-00077-pytest-randomly-isolation-strategy.md).
# The per-run seed is printed at the top of every run: "Using --randomly-seed=<N>".
# Reproduce a specific seed:
#     uv run pytest tests/integration/ -p randomly --randomly-seed=<N> -q
# Earlier fallback (CR-00048): `-p no:randomly` was in addopts 2026-05-13 → 2026-05-16
# after 5 fix cycles could not converge; superseded by CR-00055's template-clone strategy.
addopts = "--import-mode=importlib --cov=orch --cov=dashboard --cov=executor --cov-report=term-missing:skip-covered --cov-report=html:tests/output/coverage/htmlcov --cov-report=xml:tests/output/coverage/coverage.xml --cov-report=json:tests/output/coverage/coverage.json -m 'not browser and not quarantine and not contract_fuzz' --strict-markers"
markers = [
    "integration: marks tests as integration (require docker/testcontainer)",
    "smoke: fast critical-path tests; <=15 tests, <=5 critical paths, <60s wall-clock; documented in tests/CLAUDE.md; run via `make smoke`",
    "slow: marks tests as slow (deselected by default unless -m slow is passed)",
    "browser: marks tests that drive a real Chromium via playwright-cli; deselected by default — run with `-m browser` against a live dashboard the test data is visible to (e.g. iw-ai-core's existing data or an E2E stack)",
    "order_dependent: test relies on test order; tracked for cleanup in P1-CR-C-followup",
    "properties: Hypothesis property-based tests (CR-00060, P2-CR-B); auto-applied to tests/unit/properties/",
    "quarantine: test is intermittently failing or order-dependent in a way we haven't root-caused; excluded from the merge gate; tracked via an Incident (ID in the marker reason). Recovery signal: passes consistently in `make test-quarantine` for >=3 consecutive runs.",
    "contract_fuzz: schemathesis property-fuzz tests against the OpenAPI schema; excluded from the default pytest selection (never in the blocking suite); run via `make test-contract-fuzz`. See CR-00072.",
]

[tool.coverage.run]
source = ["orch", "dashboard", "executor"]
omit = [
    "orch/db/migrations/versions/*",
    "tests/*",
    "scripts/*",
    "bin/*",
]
branch = true
# Store paths relative to the repo root, not absolute — so coverage data
# generated in a daemon worktree (`.worktrees/<ITEM>/`) lines up with the
# main checkout and with diff-cover's git-relative paths. (CR-00047, 1.10 audit.)
relative_files = true

[tool.coverage.report]
# Raised from 46 by CR-00047 (P1-CR-B). Set a few points below the *lower* of
# the two measured branch-coverage slices (the `make test-unit` slice ~52% and
# the `make test-integration` slice — see ai-dev/work/TESTS_ENHANCEMENT.md
# changelog). This is a RATCHET: bump it up as coverage improves, never down.
# Enforced by `pytest --cov` at the end of every test run that picks up addopts.
fail_under = 50
skip_covered = true
show_missing = true

# --- bandit ---
[tool.bandit]
exclude_dirs = ["tests", "scripts", "orch/db/migrations/versions", ".venv"]
skips = ["B101"]

# --- vulture (dead code) ---
[tool.vulture]
min_confidence = 70
paths = ["orch", "dashboard", "executor", "scripts"]
ignore_decorators = [
    "fastapi.*",
    "pytest.*",
    "click.*",
    "app.route.*",
    "routes.*",
]
ignore_names = [
    "test_*",
    "_*",
    "__all__",
    "main",
]

# --- deptry (dependency hygiene) ---
[tool.deptry]
per_rule_ignores = [
    "DEP001 = sqlalchemy.ext.mypy.plugin",
    "DEP001 = pytest",
    "DEP001 = _pytest",
    "DEP001 = testcontainers",
    "DEP002 = factory-boy",
    "DEP002 = freezegun",
    "DEP002 = ruff",
    "DEP002 = mypy",
    "DEP002 = pre-commit",
    "DEP002 = types-freezegun",
    "DEP003 = yaml",
    "DEP003 = pydantic",
    "DEP002 = hypothesis",
]
extend_exclude = ["skills/.*"]

# Hypothesis property-based testing (CR-00060, P2-CR-B)
# Profile selection: set IW_HYPOTHESIS_PROFILE env var (ci | dev | deep).
# Defaults to `ci` when unset (merge-gate path).
[tool.hypothesis]
database_file = ".hypothesis/examples"

# Mutation testing (CR-00059, P2-CR-A) — runs on-demand, NOT in CI yet.
# Usage: make mutation-check MODULE=orch/daemon/auto_merge.py
#        make mutation-audit (currently scoped to orch/daemon/; expand in follow-up CR P2-CR-A-followup-mutation-block)
[tool.mutmut]
paths_to_mutate = "orch/daemon/"
# tests_dir must be a single existing directory — mutmut 2.5.1 rejects space-joined
# multi-path strings with FileNotFoundError. Test-scope narrowing happens in `runner`
# (which mutmut invokes verbatim and DOES accept multiple paths).
tests_dir = "tests/"
runner = "uv run pytest tests/unit/daemon/ tests/integration/daemon/ -x --tb=no -q"
